# sentinel-ops

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/sentinel/: __init__.py  trap.py  vector.py  wordfreq.py
tests/: test_vector.py  test_wordfreq.py
